--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-phone-number-input": "^3.2.16",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^8.1.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
